--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020-10-15
+
+        * Bug fix version 1.7.2 released
+        ================================
+
+
 2020-09-07
 
         * Bug fix version 1.7.1 released
