--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
-2020-10-19
+2020-11-03
 
         * Version 2.0.0 released
         ========================
+
+        Fix implementation of fix_spat_for_ts parameter in ctlike (#3426)
 
 
 2020-09-04
