--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 2.0.0
 
-19 October 2020
+3 November 2020
 
 
 Introduction
@@ -76,7 +76,10 @@ None
 
 ctlike - Maximum likelihood fitting
 -----------------------------------
-None
+A bug was fixed in the implementation of the fix_spat_for_ts parameter that
+only fixed the spatial parameters for the first of the sky models but left
+the spatial parameters free for all additional sky models. Now the parameters
+are fixed for all sky models (#3426).
 
 
 ctmapcube - CTA map cube generation
