--- a/doc/source/admin/release_history/2.0.rst
+++ b/doc/source/admin/release_history/2.0.rst
@@ -1,7 +1,7 @@
 .. _2.0:
 
-ctools 2.0 release (7 November 2020)
-====================================
+ctools 2.0 release (17 November 2020)
+=====================================
 
 Overview
 --------
@@ -28,6 +28,8 @@ Improvements
   Add ``models()`` method to :ref:`ctobssim`
 * [`3431 <https://cta-redmine.irap.omp.eu/issues/3431>`_] -
   Add :ref:`ctlike` results to XML file
+* [`3324 <https://cta-redmine.irap.omp.eu/issues/3324>`_] -
+  Replace ``std::tmpnam()`` by ``gammalib::tmpnam()`` function in :ref:`ctselect`
 
 
 New features
