--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 2.0.0
 
-3 February 2021
+4 March 2021
 
 
 Introduction
@@ -27,7 +27,7 @@ None
 
 Support model
 -------------
-None
+Added optimizer setter to ctlikelihood base class.
 
 
 Base classes
