--- a/doc/source/admin/release_history/2.0.rst
+++ b/doc/source/admin/release_history/2.0.rst
@@ -1,6 +1,6 @@
 .. _2.0:
 
-ctools 2.0 release (4 March 2021)
+ctools 2.0 release (5 March 2021)
 =================================
 
 Overview
@@ -24,6 +24,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`3562 <https://cta-redmine.irap.omp.eu/issues/3562>`_] -
+  Add hidden ``fix_spat`` parameter to :ref:`cttsmap`
 * Add optimizer setter to ``ctlikelihood`` base class.
 * Add ``refit_if_failed`` parameter to :ref:`ctlike`
 * [`3441 <https://cta-redmine.irap.omp.eu/issues/3441>`_] -
