Add BINS method to csspec (#3606)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2021-03-05
+2021-04-13
 
         * Version 2.0.0 released
         ========================
 
+        Add BINS method to csspec (#3606)
         Add hidden "fix_spat" parameter to cttsmap (#3562)
         Add optimizer setter to ctlikelihood base class
         Add Sphinx tutorials test script (#3510)
