--- a/doc/source/admin/release_history/2.0.rst
+++ b/doc/source/admin/release_history/2.0.rst
@@ -1,7 +1,7 @@
 .. _2.0:
 
-ctools 2.0 release (5 March 2021)
-=================================
+ctools 2.0 release (13 April 2021)
+==================================
 
 Overview
 --------
@@ -24,6 +24,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`3606 <https://cta-redmine.irap.omp.eu/issues/3606>`_] -
+  Add ``BINS`` method to :ref:`csspec`
 * [`3562 <https://cta-redmine.irap.omp.eu/issues/3562>`_] -
   Add hidden ``fix_spat`` parameter to :ref:`cttsmap`
 * Add optimizer setter to ``ctlikelihood`` base class.
