--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2021-04-28
+
+        * Bug fix version 1.7.4 released
+        ================================
+
+
 2020-12-02
 
         * Bug fix version 1.7.3 released
