--- a/doc/source/admin/release_history/1.7.4.rst
+++ b/doc/source/admin/release_history/1.7.4.rst
@@ -10,3 +10,5 @@ ctools 1.7.4 is a bug fix release for ctools release 1.7.
 
 The following bugs were fixed:
 
+* [`3624 <https://cta-redmine.irap.omp.eu/issues/3624>`_] -
+  Replace spectral model by file function in :ref:`csspec`
