--- a/doc/source/admin/release_history/1.7.4.rst
+++ b/doc/source/admin/release_history/1.7.4.rst
@@ -10,5 +10,9 @@ ctools 1.7.4 is a bug fix release for ctools release 1.7.
 
 The following bugs were fixed:
 
+* [`3628 <https://cta-redmine.irap.omp.eu/issues/3628>`_] -
+  Add conda activation and deactivation scripts for csh
 * [`3624 <https://cta-redmine.irap.omp.eu/issues/3624>`_] -
   Replace spectral model by file function in :ref:`csspec`
+* [`3623 <https://cta-redmine.irap.omp.eu/issues/3623>`_] -
+  Update csinfo script
