--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Chia-Chun Lu (Chia-Chun.Lu@mpi-hd.mpg.de)
 Pierrick Martin (pierrick.martin@irap.omp.eu)
 Michael Mayer (michael.mayer@physik.hu-berlin.de)
 Stefan Ohm (stefan.ohm81@gmail.com)
+Iftach Sadeh (iftach.sadeh@desy.de)
 David Sanchez (david.sanchez@lapp.in2p3.fr)
 Hubert Siejkowski (h.siejkowski@cyfronet.pl)
 Andreas Specovius (andreas.specovius@fau.de)
