--- a/NEWS
+++ b/NEWS
@@ -307,7 +307,7 @@ None
 
 cstsdist - Computes Test Statistic distribution
 -----------------------------------------------
-None
+The ASCII output file was replaced by a FITS file (#1707).
 
 
 cstsmapmerge - Merge Test Statistic maps
@@ -361,9 +361,9 @@ regions (#3248).
 
 Examples
 --------
-The show_butterfly, show_pull_evolution.py, show_pull_histogram.py and
-show_sensitivity.py scripts were adapted to deal also with FITS output files
-(#1707).
+The show_butterfly, show_pull_evolution.py, show_pull_histogram.py,
+show_sensitivity.py and show_ts_distribution.py scripts were adapted to deal
+also with FITS output files (#1707).
 
 
 caldb
