--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2021-06-24
+2021-06-25
 
         * Version 2.0.0 released
         ========================
 
+        Re-compute best log-likelihood in ctulimit.
         Add COMPTEL analysis scripts (#3738)
         Add source counts constraints to cssens (#3668)
         Stamp all output FITS files (#3662)
